--- a/articulos/alergias.html
+++ b/articulos/alergias.html
@@ -5,12 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENCICLOPEDIA JAVIALVARO - ALERGIAS</title>
     <link rel="stylesheet" href="../css/estilos2.css">
+	<link rel="alternate stylesheet" href="../css/modonoche.css" title = "Modo Noche" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/bajo-contraste.css" title = "Contraste Bajo" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/alto-contraste.css" title = "Contraste Alto" media="screen">   
+  	<link rel= "alternate stylesheet" href="../css/letra-grande.css" title = "Letra Grande" media="screen">
+	<link rel= "alternate stylesheet" href="../css/accesible.css" title = "Accesible" media="screen">
+	<link rel="stylesheet" href="../css/imprimir.css" media="print">
 </head>
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <a href="../index.html" title="pantalla inicio">
-            <img src="../imagenes/logo.jpg" alt="logo">
+            <img src="../imagenes/logo.jpg" alt="logo" class="important">
             <h1>ENCICLOPEDIA MEDICA</h1>
         </a>
     </header>
@@ -43,7 +49,7 @@
             <h3>Descripción</h3>
             <p>Las alergias son una respuesta exagerada del sistema inmunológico a sustancias que normalmente son inofensivas, como el polen, los ácaros del polvo o ciertos alimentos. Estas sustancias, conocidas como alérgenos, pueden desencadenar síntomas que van desde estornudos y picazón hasta reacciones graves como la anafilaxia. El tratamiento adecuado puede reducir significativamente los síntomas y mejorar la calidad de vida de quienes las padecen.</p>
             <figure>
-                <img src="../imagenes/alergias1.jfif" alt="paciente con alergias">
+                <img src="../imagenes/alergias1.jfif" alt="paciente con alergias" class="important">
                 <figcaption>Paciente con alergias</figcaption>
             </figure>
         </section>
@@ -117,7 +123,7 @@
         <section id="mapa">
             <h3>Mapa de Alergias</h3>
             <figure>
-                <img src="../imagenes/mapa.jpeg" alt="Mapa de alergias" usemap="#MapaAlergias">
+                <img src="../imagenes/mapa.jpeg" alt="Mapa de alergias" usemap="#MapaAlergias" class="important">
                 <figcaption>Mapa interactivo de alergias</figcaption>
             </figure>
             <map name="MapaAlergias">
