--- a/articulos/ansiedad.html
+++ b/articulos/ansiedad.html
@@ -5,12 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENCICLOPEDIA JAVIALVARO - Ansiedad</title>
     <link rel="stylesheet" href="../css/estilos2.css">
+	<link rel="alternate stylesheet" href="../css/modonoche.css" title = "Modo Noche" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/bajo-contraste.css" title = "Contraste Bajo" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/alto-contraste.css" title = "Contraste Alto" media="screen">   
+  	<link rel= "alternate stylesheet" href="../css/letra-grande.css" title = "Letra Grande" media="screen">
+	<link rel= "alternate stylesheet" href="../css/accesible.css" title = "Accesible" media="screen">
+	<link rel="stylesheet" href="../css/imprimir.css" media="print">
 </head>
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <a href="../index.html" title="Pantalla de inicio">
-            <img src="../imagenes/logo.jpg" alt="Logo">
+            <img src="../imagenes/logo.jpg" alt="Logo" class="important">
             <h1>ENCICLOPEDIAMEDICA</h1>
         </a>
     </header>
@@ -41,7 +47,7 @@
         <section id="descripcion">
             <h3>Descripción</h3>
             <p>La ansiedad es una respuesta emocional caracterizada por sentimientos de preocupación, nerviosismo o inquietud excesiva. Puede manifestarse con síntomas físicos como palpitaciones, sudoración y tensión muscular, y suele afectar la capacidad de una persona para manejar el estrés cotidiano. Los trastornos de ansiedad pueden interferir significativamente con la vida diaria, requiriendo a menudo intervención profesional para su manejo adecuado.</p>
-            <img src="../imagenes/ansiedad1.jfif" alt="Imagen de paciente con ansiedad">
+            <img src="../imagenes/ansiedad1.jfif" alt="Imagen de paciente con ansiedad" class="important">
         </section>
 
         <section id="causas">
@@ -82,7 +88,7 @@
         
         <aside id="video">
             <h3>Ciclo de la ansiedad</h3>
-            <img src="../imagenes/Ciclo-de-la-ansiedad.jpg" alt="Ciclo de ansiedad" usemap="#MapaAnsiedad" width="500">
+            <img src="../imagenes/Ciclo-de-la-ansiedad.jpg" alt="Ciclo de ansiedad" usemap="#MapaAnsiedad" width="500" class="important">
             <map name="MapaAnsiedad">
                 <area shape="rect" coords="50,50,180,130" href="https://es.wikipedia.org/wiki/Confianza" alt="Pérdida de confianza">
                 <area shape="rect" coords="300,70,400,110" href="https://es.wikipedia.org/wiki/Miedo" alt="Miedo">
@@ -91,11 +97,12 @@
                 <area shape="poly" coords="180,250,10,250,30,180,180,180" href="https://es.wikipedia.org/wiki/Preocupaci%C3%B3n" alt="Preocupación">
                 <area shape="poly" coords="350,320,150,320,150,270,350,270" href="https://es.wikipedia.org/wiki/Estr%C3%A9s" alt="Alivio a corto plazo">
             </map>
-		
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/UxUybYT_WZo" 
-                title="Video del Dr. Víctor Navarro sobre la ansiedad. En este video, el Dr. Navarro explora los síntomas, causas y tratamientos para la ansiedad, proporcionando una visión comprensible y accesible sobre el tema." 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </aside>
+			<div class="video-container">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/UxUybYT_WZo" 
+					title="Video del Dr. Víctor Navarro sobre la ansiedad. En este video, el Dr. Navarro explora los síntomas, causas y tratamientos para la ansiedad, proporcionando una visión comprensible y accesible sobre el tema." 
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</aside>
         
         <footer class="piePagina">
             <dl>
