--- a/articulos/bartolinitis.html
+++ b/articulos/bartolinitis.html
@@ -5,12 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENCICLOPEDIAJAVIALVARO - BARTOLINITIS</title>
     <link rel="stylesheet" href="../css/estilos2.css">
-</head>
+	<link rel="alternate stylesheet" href="../css/modonoche.css" title = "Modo Noche" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/bajo-contraste.css" title = "Contraste Bajo" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/alto-contraste.css" title = "Contraste Alto" media="screen">   
+  	<link rel= "alternate stylesheet" href="../css/letra-grande.css" title = "Letra Grande" media="screen">
+	<link rel= "alternate stylesheet" href="../css/accesible.css" title = "Accesible" media="screen">
+	<link rel="stylesheet" href="../css/imprimir.css" media="print">
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <a href="../index.html" title="Pantalla inicio">
-            <img src="../imagenes/logo.jpg" alt="Logo de ENCICLOPEDIAMEDICA" >
+            <img src="../imagenes/logo.jpg" alt="Logo de ENCICLOPEDIAMEDICA" class="important">
             <h1>ENCICLOPEDIAMEDICA</h1>
         </a>
     </header>
@@ -43,7 +48,7 @@
         <section id="descripcion">
             <h3>Descripción</h3>
             <p>La bartolinitis es una inflamación de las glándulas de Bartolino, situadas a ambos lados de la abertura vaginal. Generalmente causada por infecciones bacterianas, puede provocar dolor, hinchazón y molestias en la zona genital. En algunos casos, la inflamación puede llevar a la formación de abscesos, que requieren tratamiento médico para aliviar los síntomas y prevenir complicaciones.</p>
-            <img src="../imagenes/bartolinitis.jfif" alt="Imagen de glándulas inflamadas" >
+            <img src="../imagenes/bartolinitis.jfif" alt="Imagen de glándulas inflamadas" class="important">
         </section>
         
         <section id="causas">
@@ -88,8 +93,7 @@
             </ol>
         </section>
     </main>
-    
-    <aside id ="video">
+    <aside id ="video" class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8iRb65_sYWc" title="Todo lo que necesita saber sobre la Bartolinitis" 
         style="border:none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </aside>
