--- a/articulos/botulismo.html
+++ b/articulos/botulismo.html
@@ -5,12 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENCICLOPEDIAJAVIALVARO - BOTULISMO</title>
     <link rel="stylesheet" href="../css/estilos2.css">
+	<link rel="alternate stylesheet" href="../css/modonoche.css" title = "Modo Noche" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/bajo-contraste.css" title = "Contraste Bajo" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/alto-contraste.css" title = "Contraste Alto" media="screen">   
+  	<link rel= "alternate stylesheet" href="../css/letra-grande.css" title = "Letra Grande" media="screen">
+	<link rel= "alternate stylesheet" href="../css/accesible.css" title = "Accesible" media="screen">
+	<link rel="stylesheet" href="../css/imprimir.css" media="print">
 </head>
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
         <a href="../index.html" title="Pantalla inicio">
-            <img src="../imagenes/logo.jpg" alt="Logo de ENCICLOPEDIAMEDICA">
+            <img src="../imagenes/logo.jpg" alt="Logo de ENCICLOPEDIAMEDICA" class="important">
             <h1>ENCICLOPEDIAMEDICA</h1>
         </a>
     </header>
@@ -44,7 +50,7 @@
             <h2>Botulismo</h2>
             <h3>Descripción</h3>
             <p>El botulismo es una enfermedad grave causada por la toxina de la bacteria <em>Clostridium botulinum</em>, que afecta los nervios y puede provocar parálisis. Generalmente se transmite a través de alimentos contaminados o heridas infectadas.</p>
-            <img src="../imagenes/botulismo.jfif" alt="Imagen de paciente con botulismo">
+            <img src="../imagenes/botulismo.jfif" alt="Imagen de paciente con botulismo" class="important">
         </section>
 
         <section id="causas">
@@ -114,7 +120,7 @@
         </section>
 
 
-        <aside id="video">
+        <aside id="video" class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TaZuFcV6ej8" title="Video explicativo del botulismo" 
             style="border:none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </aside>
