--- a/indices/formulario.html
+++ b/indices/formulario.html
@@ -6,12 +6,17 @@
     <title>Añadir Nueva Versión de Artículo - Enciclopedia</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../css/estilos2.css" type="text/css">
-</head>
+	<link rel="alternate stylesheet" href="../css/modonoche.css" title = "Modo Noche" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/bajo-contraste.css" title = "Contraste Bajo" media="screen">
+   	<link rel="alternate stylesheet" href= "../css/alto-contraste.css" title = "Contraste Alto" media="screen">   
+  	<link rel= "alternate stylesheet" href="../css/letra-grande.css" title = "Letra Grande" media="screen">
+	<link rel= "alternate stylesheet" href="../css/accesible.css" title = "Accesible" media="screen">
+	<link rel="stylesheet" href="../css/imprimir.css" media="print">
 <body>
     <a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
 	<header>
         <a href="../index.html" title="Indice">
-            <img src="../imagenes/logo.jpg" alt=""/>
+            <img src="../imagenes/logo.jpg" alt="" class="important">
             <h1>ENCICLOPEDIAMEDICA</h1>
         </a>
     </header>
