--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>ENCICLOPEDIA JAVIALVARO - ENCICLOPEDIAMEDICA</title>
 	<link rel="stylesheet" href="css/estilos2.css">
+	<link rel="alternate stylesheet" href="css/modonoche.css" title = "Modo Noche" media="screen">
+   	<link rel="alternate stylesheet" href= "css/bajo-contraste.css" title = "Contraste Bajo" media="screen">
+   	<link rel="alternate stylesheet" href= "css/alto-contraste.css" title = "Contraste Alto" media="screen">   
+  	<link rel= "alternate stylesheet" href="css/letra-grande.css" title = "Letra Grande" media="screen">
+	<link rel= "alternate stylesheet" href="css/accesible.css" title = "Accesible" media="screen">
+	<link rel="stylesheet" href="css/imprimir.css" media="print">
 </head>
 <body>
 	<a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
-        <img src="imagenes/logo.jpg" alt="">
+        <img src="imagenes/logo.jpg" alt="" class="important">
         <h1>ENCICLOPEDIAMEDICA</h1>
     </header>
 
