--- a/articulos/alergias.html
+++ b/articulos/alergias.html
@@ -30,7 +30,7 @@
         </p>
     </nav>
 
-        <h2>Alergias</h2>
+        <h2>Alergias</h2
 
         <section>
             <h3>Tabla de Contenidos</h3>
@@ -42,6 +42,8 @@
                 <li><a href="#tratamiento">Tratamiento</a></li>
                 <li><a href="#tipos">Tipos de Alergias</a></li>
                 <li><a href="#mapa">Mapa de Alergias</a></li>
+				<li><a href="#pdf">PDF</a></li>
+				
             </ul>
         </section>
 
@@ -134,7 +136,12 @@
             </map>
         </section>
 
-   
+		<section id="pdf">
+			<ul>
+				<li><a href="../documentos/alergias_documento_accesible.pdf" title="Alergias"> PDF accesible</a></li>
+				<li><a href="../documentos/alergias_documento_inaccesible.pdf" title="Alergias"> PDF inaccesible</a></li>
+			</ul>
+		</section>
 
       <footer class="piePagina">
             <dl>
