--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<a>Indice</a>
 			</p>
 		</nav>
-        <p>
+        <p class="eliminar">
             Bienvenido a nuestra enciclopedia médica en línea, tu fuente confiable para información sobre enfermedades, tratamientos y términos médicos. Explora artículos actualizados y precisos, respaldados por expertos, para cuidar tu salud y bienestar.
         </p>
         
