--- a/index.html
+++ b/index.html
@@ -87,16 +87,19 @@
 				<div class="amara-embed" data-url="http://www.youtube.com/watch?v=qjVDkDdtilM" data-team="null"></div>
 				</div>
 				<div class="video-container">
-					<iframe width="500" height="315" 
+					<iframe width="500" height="300" 
 							src="https://www.youtube.com/embed/qjVDkDdtilM" 
 							title="Tutorial" 
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-							allowfullscreen></iframe>
+							allowfullscreen> </iframe>
 				</div>
 				<video width="500" height="300" controls autoplay muted loop>
-    				<source src="video/video.mp4" type="video/mp4" title="Tutorial">
-  				
+					<source src="video/video.mp4" type="video/mp4" title="Tutorial">
+					<track src="subtitulos/captions_esp.vtt" kind="subtitles" srclang="es" label="Español" default>
+					<track src="subtitulos/captions_en.vtt" kind="subtitles" srclang="en" label="Inglés">
+					
 				</video>
+
 		</section>
     </main>
 
