--- a/articulos/alergias.html
+++ b/articulos/alergias.html
@@ -26,8 +26,8 @@
         <p>
             <a href="../index.html" title="Indice">Indice</a> >
             <a href="../indices/A.html" title="Enfermedades con letra A">Patologías con letra 'A'</a> >
-			<a> Alergias </a>
         </p>
+		<p> Alergias </p>
     </nav>
 
         <h2>Alergias</h2
@@ -142,17 +142,24 @@
 				<li><a href="../documentos/alergias_documento_inaccesible.pdf" title="Alergias"> PDF inaccesible</a></li>
 			</ul>
 		</section>
-
-      <footer class="piePagina">
-            <dl>
-                <dt>Autores:</dt>
-                <dd>Javier Lopez</dd>
-                <dd>Alvaro Safont</dd>
-            </dl>
-            <p><em>Ingeniería Biomédica</em></p>
-            <p><strong>COPYRIGHT 2024</strong></p>
-        </footer>
-        </main>
+		</main>
+		<aside>
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+		</aside>
+		
+		<footer class="piePagina">
+			<dl>
+				<dt>Autores:</dt>
+				<dd>Javier Lopez</dd>
+				<dd>Alvaro Safont</dd>
+			</dl>
+			<p><em>Ingeniería Biomédica</em></p>
+			<p><strong>COPYRIGHT 2024</strong></p>
+		</footer>
+        
 </body>
 </html>
 
