--- a/articulos/ansiedad.html
+++ b/articulos/ansiedad.html
@@ -26,8 +26,9 @@
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
                 <a href="../indices/A.html" title="Índice de Enfermedades con letra A">>Patologías con letra 'A'</a> >
-                <a>Ansiedad</a>
+                
             </p>
+			<p>Ansiedad</p>
         </nav>
 
         <h2>Ansiedad</h2>
@@ -102,8 +103,16 @@
 					title="Video del Dr. Víctor Navarro sobre la ansiedad. En este video, el Dr. Navarro explora los síntomas, causas y tratamientos para la ansiedad, proporcionando una visión comprensible y accesible sobre el tema." 
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
+			
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+	
 		</aside>
         
+		</main>
+		
         <footer class="piePagina">
             <dl>
                 <dt>Autores:</dt>
@@ -113,6 +122,5 @@
             <p><em>Ingeniería Biomédica</em></p>
             <p><strong>COPYRIGHT 2024</strong></p>
         </footer>
-    </main>
 </body>
 </html>
