--- a/articulos/respuesta_formulario.html
+++ b/articulos/respuesta_formulario.html
@@ -31,10 +31,16 @@
 		</nav>
 		<h2>Respuesta Formulario:</h2>
         <p>Hemos recibido la petición de guardar el articulo</p>
-    </main>
 
-       <footer>
-	 
+		<aside>
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+		</aside>
+	</main>
+   <footer>
+ 
 	   <dl>
 	   <dt>Autores:</dt>
 	   <dd>Javier Lopez</dd>
