--- a/indices/A.html
+++ b/indices/A.html
@@ -41,7 +41,15 @@
                 </ul>
             </nav>
         </article>
-    </main>
+	</main>
+		<aside>
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+		</aside>
+	
+    
 
     <footer class="piePagina">
         <dl>
