--- a/indices/accesibilidad.html
+++ b/indices/accesibilidad.html
@@ -149,14 +149,16 @@
                 Esta declaración fue creada el
                 <span class="basic-information statement-created-date">9 de octubre de 2024</span>
                 utilizando la <a href="https://www.w3.org/WAI/planning/statements/">Herramienta Generadora de Declaraciones de Accesibilidad de W3C</a>.
+				Fue revisada por última vez el <span class="basic-information statement-reviewed-date">20 de noviembre de 2024</span>.
             </p>
             <p>
                 This statement was created on
                 <span class="basic-information statement-created-date">October 9, 2024</span>
                 using the <a href="https://www.w3.org/WAI/planning/statements/">W3C Accessibility Statement Generator Tool</a>.
+				Revised on <span class="basic-information statement-reviewed-date">20 of NOvember 2024</span>.
             </p>
         </section>
-    </main>
+	</main>
 
     <footer class="piePagina">
         <dl>
