--- a/indices/buscador.html
+++ b/indices/buscador.html
@@ -14,19 +14,21 @@
 	<link rel="stylesheet" href="../css/imprimir.css" media="print">
 </head>
 <body>
+
     <a href="#contenido-principal" class="saltar">Saltar al contenido principal</a>
     <header>
-       <a>
-            <img src="../imagenes/logo.jpg" alt="" class="important">
-            <h1>ENCICLOPEDIAMEDICA</h1>
-        </a>
+	   <a href="index.html" title="Ir al inicio de Enciclopedia Médica">
+		<img src="../imagenes/logo.jpg" alt="Logo de Enciclopedia Médica" class="important">
+		<span>ENCICLOPEDIAMEDICA</span>
+		</a>
+
     </header>
 
     <main id="contenido-principal">
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
-                <a title="Buscador">Buscador</a> >
+                <a href="buscador.html" title="Ir al buscador de la Enciclopedia">Buscador</a> >
             </p>
         </nav>
 		<h2>Buscar Artículos</h2>
@@ -63,7 +65,14 @@
 			
             <input type="submit" value="Buscar" class="centrado">
         </form>
-    </main>
+		</main>
+		<aside>
+				<nav>
+					<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+					<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+				</nav>
+		</aside>
+	
 
     <footer>
         <dl>
