--- a/indices/error.html
+++ b/indices/error.html
@@ -27,7 +27,13 @@
 		<main id="contenido-principal">
 			<h2>Error 404-Página NO encontrada</h2>
         </main>
-    
+		<aside>
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+		</aside>
+	
         
     <footer class = "piePagina">	
 
