--- a/indices/mapa.html
+++ b/indices/mapa.html
@@ -25,7 +25,7 @@
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
-                <a>Mapa</a>
+                <p>Mapa</p>
             </p>
         </nav>
 		<h2>MAPA:</h2>
