--- a/articulos/botulismo.html
+++ b/articulos/botulismo.html
@@ -123,6 +123,12 @@
         <aside id="video" class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TaZuFcV6ej8" title="Video explicativo del botulismo" 
             style="border:none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+	
         </aside>
     </main>
 
