--- a/articulos/respuesta_buscador.html
+++ b/articulos/respuesta_buscador.html
@@ -25,22 +25,32 @@
             <p>
                 <a href="../index.html" title="indice">Indice</a> >
                 <a href="../indices/buscador.html" title="buscador">Buscador</a> >
-                <a>Respuesta Buscador</a>
-            </p>
+            </p>    
+			<p>Respuesta Buscador</p>
+            
         </nav>
 		<h2>Respuesta de Búsqueda</h2>
 		<p>La búsqueda no ha producido resultados para el criterio de búsqueda empleado, pruebe a realizar otra búsqueda.</p>
+		
+		<aside>
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+		</aside>
+		
     </main>
+
 
        <footer>
 	 
-	   <dl>
-	   <dt>Autores:</dt>
-	   <dd>Javier Lopez</dd>
-	   <dd>Alvaro Safont</dd>
-		</dl>
-		<p><em>Ingeniería Biomédica</em></p>
-		<p><strong>COPYRIGHT 2024</strong></p>	
+		   <dl>
+		   <dt>Autores:</dt>
+		   <dd>Javier Lopez</dd>
+		   <dd>Alvaro Safont</dd>
+			</dl>
+			<p><em>Ingeniería Biomédica</em></p>
+			<p><strong>COPYRIGHT 2024</strong></p>	
 
     </footer>
 </body>
