--- a/articulos/respuesta_contacto.html
+++ b/articulos/respuesta_contacto.html
@@ -30,8 +30,14 @@
         </nav>
 		<h2>Respuesta de Contacto</h2>
 		<p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta.</p>
-    </main>
-
+	
+	<aside>
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+	</aside>
+	</main>
     <footer>
 	 
 	   <dl>
