--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 		<nav>
 			<p>
-				<a>Indice</a>
+				Indice
 			</p>
 		</nav>
         <p class="eliminar">
@@ -87,19 +87,22 @@
 				<div class="amara-embed" data-url="http://www.youtube.com/watch?v=qjVDkDdtilM" data-team="null"></div>
 				</div>
 				<div class="video-container">
-					<iframe width="500" height="300" 
+					<iframe width="500" height="315" 
 							src="https://www.youtube.com/embed/qjVDkDdtilM" 
 							title="Tutorial" 
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-							allowfullscreen> </iframe>
+							allowfullscreen></iframe>
 				</div>
 				<video width="500" height="300" controls autoplay muted loop>
-					<source src="video/video.mp4" type="video/mp4" title="Tutorial">
-					<track src="subtitulos/captions_esp.vtt" kind="subtitles" srclang="es" label="Español" default>
-					<track src="subtitulos/captions_en.vtt" kind="subtitles" srclang="en" label="Inglés">
-					
+    				<source src="video/video.mp4" type="video/mp4" title="Tutorial">
+  				
 				</video>
-
+		</section>
+		<section>
+			<h2>Blog</h2>
+				<div class="blog-container">
+					<iframe src="https://webjavialvaro.wordpress.com/" title="Blog de Javi Álvaro"></iframe>
+				</div>
 		</section>
     </main>
 
