--- a/indices/contacto.html
+++ b/indices/contacto.html
@@ -95,7 +95,14 @@
                 <input type="submit" value="Enviar" class="centrado">
             </p>
         </form>
-    </main>
+		</main>
+		<aside>
+				<nav>
+					<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+					<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+				</nav>
+		</aside>
+	
 
     <footer>
         <dl>
