--- a/indices/formulario.html
+++ b/indices/formulario.html
@@ -79,7 +79,13 @@
             <input type="submit" value="Enviar" class="centrado">
         </form>
     </main>
-
+	<aside>
+			<nav>
+				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
+				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+			</nav>
+	</aside>
+	
     <footer>
         <dl>
             <dt>Autores:</dt>
