--- a/articulos/alergias.html
+++ b/articulos/alergias.html
@@ -24,7 +24,7 @@
 	<main id="contenido-principal">
     <nav>
         <p>
-            <a href="../index.html" title="Indice">Indice</a> >
+            <a href="../index.html" title="Volver a Indice">Indice</a> >
             <a href="../indices/A.html" title="Enfermedades con letra A">Patologías con letra 'A'</a> >
         </p>
 		<p> Alergias </p>
@@ -143,23 +143,19 @@
 			</ul>
 		</section>
 		</main>
-		<aside>
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-		</aside>
-		
-		<footer class="piePagina">
-			<dl>
-				<dt>Autores:</dt>
-				<dd>Javier Lopez</dd>
-				<dd>Alvaro Safont</dd>
-			</dl>
-			<p><em>Ingeniería Biomédica</em></p>
-			<p><strong>COPYRIGHT 2024</strong></p>
-		</footer>
-        
+	
+ 
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
+        <dl>
+            <dt>Autores:</dt>
+            <dd>Javier Lopez</dd>
+            <dd>Alvaro Safont</dd>
+        </dl>
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
+        <p><em>Ingeniería Biomédica</em></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
+    </footer>
 </body>
 </html>
 
