--- a/articulos/ansiedad.html
+++ b/articulos/ansiedad.html
@@ -103,24 +103,25 @@
 					title="Video del Dr. Víctor Navarro sobre la ansiedad. En este video, el Dr. Navarro explora los síntomas, causas y tratamientos para la ansiedad, proporcionando una visión comprensible y accesible sobre el tema." 
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-	
-		</aside>
-        
-		</main>
 		
-        <footer class="piePagina">
-            <dl>
-                <dt>Autores:</dt>
-                <dd>Javier Lopez</dd>
-                <dd>Alvaro Safont</dd>
-            </dl>
-            <p><em>Ingeniería Biomédica</em></p>
-            <p><strong>COPYRIGHT 2024</strong></p>
-        </footer>
+	
+		<nav>
+            <p><a href="articulos/ansiedad.html" title="Artículo sobre la ansiedad">Artículo completo</a></p>
+            <p><a href="indices/formulario.html" title="Añade tu artículo">Añade tu artículo</a></p>
+		</nav>
+		
+	    </aside>
+
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
+        <dl>
+            <dt>Autores:</dt>
+            <dd>Javier Lopez</dd>
+            <dd>Alvaro Safont</dd>
+        </dl>
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
+        <p><em>Ingeniería Biomédica</em></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
+    </footer>
 </body>
 </html>
