--- a/articulos/botulismo.html
+++ b/articulos/botulismo.html
@@ -75,7 +75,6 @@
             </ol>
         </section>
 
-        <!-- Sección Pruebas -->
         <section id="pruebas">
             <h3>Pruebas</h3>
             <ol type="a">
@@ -123,21 +122,17 @@
         <aside id="video" class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TaZuFcV6ej8" title="Video explicativo del botulismo" 
             style="border:none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-	
         </aside>
-    </main>
-
-    <footer class="piePagina">    
+		</main>
+	
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
             <dd>Alvaro Safont</dd>
         </dl>
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
         <p><em>Ingeniería Biomédica</em></p>
         <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
