--- a/articulos/respuesta_formulario.html
+++ b/articulos/respuesta_formulario.html
@@ -32,23 +32,19 @@
 		<h2>Respuesta Formulario:</h2>
         <p>Hemos recibido la petición de guardar el articulo</p>
 
-		<aside>
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-		</aside>
 	</main>
-   <footer>
- 
-	   <dl>
-	   <dt>Autores:</dt>
-	   <dd>Javier Lopez</dd>
-	   <dd>Alvaro Safont</dd>
-		</dl>
-		<p><em>Ingeniería Biomédica</em></p>
-		<p><strong>COPYRIGHT 2024</strong></p>	
 
+
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
+        <dl>
+            <dt>Autores:</dt>
+            <dd>Javier Lopez</dd>
+            <dd>Alvaro Safont</dd>
+        </dl>
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
+        <p><em>Ingeniería Biomédica</em></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
