--- a/index.html
+++ b/index.html
@@ -31,38 +31,38 @@
         </p>
         
         <nav>
-            <a href="indices/buscador.html" title="Buscador">Buscador</a> |
-            <a href="indices/contacto.html" title="Contato">Contacto</a>
+            <a href="indices/buscador.html" title="Formulario de Buscador">Buscador</a> |
+            <a href="indices/contacto.html" title="Formulario de Contato">Contacto</a>
         </nav>
 		<section>
 			<h2>ÍNDICE</h2>
 			<ul class="indice-horizontal">
-				<li><a class="indice-boton" href="indices/A.html" title="A">A</a></li>
-				<li><a class="indice-boton" href="indices/B.html" title="B">B</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="C">C</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="D">D</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="E">E</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="F">F</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="G">G</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="H">H</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="I">I</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="J">J</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="K">K</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="L">L</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="M">M</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="N">N</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="O">O</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="P">P</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="Q">Q</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="R">R</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="S">S</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="T">T</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="U">U</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="V">V</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="W">W</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="X">X</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="Y">Y</a></li>
-				<li><a class="indice-boton" href="indices/error.html" title="Z">Z</a></li>
+				<li><a class="indice-boton" href="indices/A.html" title="Patologías con letra A">A</a></li>
+				<li><a class="indice-boton" href="indices/B.html" title="Patologías con letra B">B</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra C">C</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra D">D</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra E">E</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra F">F</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra G">G</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra H">H</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra I">I</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra J">J</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra K">K</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra L">L</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra M">M</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra N">N</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra O">O</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra P">P</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra Q">Q</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra R">R</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra S">S</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra T">T</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra U">U</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra V">V</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra W">W</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra X">X</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra Y">Y</a></li>
+				<li><a class="indice-boton" href="indices/error.html" title="Patologías con letra Z">Z</a></li>
 			</ul>
 		</section>
         
@@ -110,22 +110,21 @@
 		
 			<nav>
             <p><a href="articulos/ansiedad.html" title="Artículo sobre la ansiedad">Artículo completo</a></p>
-            <p><a href="indices/formulario.html" title="Añade tu artículo">Añade tu artículo</a></p>
-            <p><a href="indices/mapa.html" title="Mapa">Mapa</a></p>
-            <p><a href="indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
+            <p><a href="indices/formulario.html" title="Añade tu propio artículo">Añade tu artículo</a></p>
 		</nav>
 		
     </aside>
 
     <footer class="piePagina">
+		<p><a href="indices/mapa.html" title="Mapa">Mapa del sitio web</a><p>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
             <dd>Alvaro Safont</dd>
         </dl>
+        <p><a href="indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
         <p><em>Ingeniería Biomédica</em></p>
         <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
-	<script type="text/javascript" src="https://amara.org/embedder-iframe"></script>
 </body>
 </html>
