--- a/indices/A.html
+++ b/indices/A.html
@@ -24,7 +24,7 @@
 <main id="contenido-principal">
         <nav>
             <p>
-                <a href="../index.html" title="Indice">Indice</a> >
+                <a href="../index.html" title="Volver al Indice">Indice</a> >
                 <a>Patologías con letra 'A'</a>
             </p>
         </nav>
@@ -42,21 +42,16 @@
             </nav>
         </article>
 	</main>
-		<aside>
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-		</aside>
-	
-    
 
-    <footer class="piePagina">
+
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
             <dd>Alvaro Safont</dd>
         </dl>
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
         <p><em>Ingeniería Biomédica</em></p>
         <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
