--- a/indices/B.html
+++ b/indices/B.html
@@ -43,23 +43,17 @@
             </nav>
         </article>
 	</main>
-    <aside>
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-	</aside>
-	
 
-    <footer class="piePagina">
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
             <dd>Alvaro Safont</dd>
         </dl>
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
         <p><em>Ingeniería Biomédica</em></p>
         <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
-
