--- a/indices/accesibilidad.html
+++ b/indices/accesibilidad.html
@@ -24,8 +24,8 @@
 	<main id="contenido-principal">
 		<nav>
 			<p>
-				<a href="../index.html" title="Indice">Indice</a> >
-				<a>Accesibilidad</a> 
+				<a href="../index.html" title="Volver al indice">Indice</a>
+				<p>Accesibilidad</p> 
 			</p>
 		</nav>
 		<h2>Declaración de Accesibilidad para <span class="basic-information website-name">EnciclopediaJaviAlvaro</span></h2>
@@ -160,7 +160,10 @@
         </section>
 	</main>
 
-    <footer class="piePagina">
+
+
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
