--- a/indices/contacto.html
+++ b/indices/contacto.html
@@ -25,7 +25,6 @@
         <nav>
             <p>
                 <a href="../index.html" title="Indice">Indice</a> >
-                <a title="Contacto">Contacto</a> >
             </p>
         </nav>
 		<h2>Contáctanos:</h2>
@@ -96,26 +95,18 @@
             </p>
         </form>
 		</main>
-		<aside>
-				<nav>
-					<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-					<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-				</nav>
-		</aside>
 	
 
-    <footer>
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
             <dd>Alvaro Safont</dd>
         </dl>
-        <p>
-            <em>Ingeniería Biomédica</em>
-        </p>
-        <p>
-            <strong>COPYRIGHT 2024</strong>
-        </p>    
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
+        <p><em>Ingeniería Biomédica</em></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
