--- a/articulos/respuesta_contacto.html
+++ b/articulos/respuesta_contacto.html
@@ -23,31 +23,24 @@
 	<main id="contenido-principal">
         <nav>
             <p>
-                <a href="../index.html" title="indice">Indice</a> >
-                <a href="../indices/contacto.html" title="contacto">Contacto</a> >
-                <a>Respuesta Contacto</a>
+                <a href="../index.html" title="volver al indice">Indice</a> >
+                <a href="../indices/contacto.html" title="contacto">Contacto</a>
             </p>
         </nav>
 		<h2>Respuesta de Contacto</h2>
 		<p>Hemos recibido su consulta, en breve nos pondremos en contacto para proporcionarle una respuesta.</p>
 	
-	<aside>
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-	</aside>
-	</main>
-    <footer>
-	 
-	   <dl>
-	   <dt>Autores:</dt>
-	   <dd>Javier Lopez</dd>
-	   <dd>Alvaro Safont</dd>
-		</dl>
-		<p><em>Ingeniería Biomédica</em></p>
-		<p><strong>COPYRIGHT 2024</strong></p>
 
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Pagina para ver el Mapa">Mapa</a>
+        <dl>
+            <dt>Autores:</dt>
+            <dd>Javier Lopez</dd>
+            <dd>Alvaro Safont</dd>
+        </dl>
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
+        <p><em>Ingeniería Biomédica</em></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
