--- a/indices/buscador.html
+++ b/indices/buscador.html
@@ -19,7 +19,7 @@
     <header>
 	   <a href="index.html" title="Ir al inicio de Enciclopedia Médica">
 		<img src="../imagenes/logo.jpg" alt="Logo de Enciclopedia Médica" class="important">
-		<span>ENCICLOPEDIAMEDICA</span>
+		<h1>ENCICLOPEDIAMEDICA</h1>
 		</a>
 
     </header>
@@ -66,27 +66,18 @@
             <input type="submit" value="Buscar" class="centrado">
         </form>
 		</main>
-		<aside>
-				<nav>
-					<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-					<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-				</nav>
-		</aside>
-	
 
-    <footer>
+		
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
             <dd>Alvaro Safont</dd>
         </dl>
-        <p>
-            <em>Ingeniería Biomédica</em>
-        </p>
-        <p>
-            <strong>COPYRIGHT 2024</strong>
-        </p>	
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
+        <p><em>Ingeniería Biomédica</em></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
-
