--- a/indices/formulario.html
+++ b/indices/formulario.html
@@ -79,25 +79,18 @@
             <input type="submit" value="Enviar" class="centrado">
         </form>
     </main>
-	<aside>
-			<nav>
-				<p><a href="../indices/mapa.html" title="Mapa">Mapa</a></p>
-				<p><a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a></p>
-			</nav>
-	</aside>
 	
-    <footer>
+
+  <footer class="piePagina">
+		<a href="../indices/mapa.html" title="Mapa">Mapa</a>
         <dl>
             <dt>Autores:</dt>
             <dd>Javier Lopez</dd>
             <dd>Alvaro Safont</dd>
         </dl>
-        <p>
-            <em>Ingeniería Biomédica</em>
-        </p>
-        <p>
-            <strong>COPYRIGHT 2024</strong>
-        </p>    
+        <p><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></p>
+        <p><em>Ingeniería Biomédica</em></p>
+        <p><strong>COPYRIGHT 2024</strong></p>
     </footer>
 </body>
 </html>
