--- a/indices/mapa.html
+++ b/indices/mapa.html
@@ -22,34 +22,28 @@
     </header>
 
    <main id="contenido-principal">
-        <nav>
-            <p>
-                <a href="../index.html" title="Indice">Indice</a> >
-                <p>Mapa</p>
-            </p>
-        </nav>
 		<h2>MAPA:</h2>
             <nav>
-				<a href="../index.html" title="Indice">Indice</a> 
+				<a href="../index.html" title="Volver al Indice">Indice</a> 
 				<ul>
 					<li><a href="../indices/A.html" title="Patologías con letra A">Patologías con letra 'A'</a>
 						<ul>
-							<li><a href="../articulos/ansiedad.html" title="Ansiedad">Ansiedad</a></li>
-							<li><a href="../articulos/alergias.html" title="Alergias">Alergias</a></li>
+							<li><a href="../articulos/ansiedad.html" title="Patología - Ansiedad">Ansiedad</a></li>
+							<li><a href="../articulos/alergias.html" title="Patología - Alergias">Alergias</a></li>
 						</ul>
 					</li>
 					<li><a href="../indices/B.html" title="Patologías con letra B">Patologías con letra 'B'</a>
 						<ul>
-							<li><a href="../articulos/botulismo.html" title="Botulismo">Botulismo</a></li>
-							<li><a href="../articulos/bartolinitis.html" title="Bartolinitis">Bartolinitis</a></li>
+							<li><a href="../articulos/botulismo.html" title="Patología - Botulismo">Botulismo</a></li>
+							<li><a href="../articulos/bartolinitis.html" title="Patología - Bartolinitis">Bartolinitis</a></li>
 						</ul>
 					</li>
-					<li><a href="../indices/buscador.html" title="Buscador">Buscador</a>
+					<li><a href="../indices/buscador.html" title="Formulario de Buscador">Buscador</a>
 						<ul>
-							<li><a href="../articulos/respuesta_buscador.html" title="Respuesta Buscador"> Respuesta Buscador</a></li>
+							<li><a href="../articulos/respuesta_buscador.html" title="Respuesta de Buscador"> Respuesta Buscador</a></li>
 						</ul>
 					</li>
-					<li><a href="../indices/contacto.html" title="Contacto">Contacto</a>
+					<li><a href="../indices/contacto.html" title="Formulario de Contacto">Contacto</a>
 						<ul>
 							<li><a href="../articulos/respuesta_contacto.html" title="Respuesta Contacto">Respuesta Contacto</a></li>
 						</ul>
@@ -59,8 +53,17 @@
 							<li><a href="../articulos/respuesta_formulario.html" title="Respuesta Formulario">Respuesta Formulario</a></li>
 						</ul>
 					</li>
+					<li><a href="../indices/accesibilidad.html" title="Accesibilidad">Declaración de Accesibilidad</a></li>
+						<ul>
+							<li><a href="../indices/contacto.html" title="Formulario de Contacto">Contacto</a>
+								<ul>
+									<li><a href="../articulos/respuesta_contacto.html" title="Respuesta Contacto">Respuesta Contacto</a></li>
+								</ul>
+							</li>
+						</ul>
+						
 				</ul>
-				<a href="../indices/accesibilidad.html" title="Accesibilidad">Accesibilidad</a>
+				
             </nav>
     </main>
 
